--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <!-- <h2 class="project-tagline"> <b>Preprint 2023</b> </h2> -->
       <h2 class="project-tagline"><a href="https://jcchen.me" >Jiacheng Chen</a> &nbsp;&nbsp; <a href="https://ruizhid.me/">Ruizhi Deng</a> &nbsp;&nbsp;  <a href="https://www2.cs.sfu.ca/~furukawa/">Yasutaka Furukawa</a></h2>
       <h2 class="project-tagline"> Simon Fraser University </h2>
+      <a href="" class="btn">Arxiv</a>
+      <a href="" class="btn">Code</a>
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
       <!-- {% endif %} -->
