--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
 .page-header {
   color: $header-heading-color;
   text-align: center;
-  background-color: #EEEEEE;
+  background-color: #E3F4F4;
   background-image: none;
   opacity: 0.8;
 
@@ -41,6 +41,13 @@
 		text-decoration: underline;
 	}
 }
+
+.btn{
+ a {
+    color: #111111; 
+ } 
+}
+
 
 .text-center {
   text-align: center;
