--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
 .page-header {
   color: $header-heading-color;
   text-align: center;
-  background-color: #E3F4F4;
+  background-color: #e3f4f46e;
   background-image: none;
   opacity: 0.8;
 
@@ -43,9 +43,8 @@
 }
 
 .btn{
- a {
-    color: #111111; 
- } 
+ color: #252525;
+ background-color: #abcdde;
 }
 
 
