--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
       <h2 class="project-tagline"><a href="https://jcchen.me" >Jiacheng Chen</a> &nbsp;&nbsp; <a href="https://ruizhid.me/">Ruizhi Deng</a> &nbsp;&nbsp;  <a href="https://www2.cs.sfu.ca/~furukawa/">Yasutaka Furukawa</a></h2>
       <h2 class="project-tagline"> Simon Fraser University </h2>
       <a href="" class="btn">Arxiv</a>
-      <a href="" class="btn">Code</a>
+      <a href="https://github.com/woodfrog/poly-diffuse" class="btn">Code (coming soon)</a>
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
       <!-- {% endif %} -->
