--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <!-- <h2 class="project-tagline"> <b>Preprint 2023</b> </h2> -->
+      <h2 class="project-tagline"> <b>NeurIPS 2023</b> </h2>
       <h2 class="project-tagline"><a href="https://jcchen.me" >Jiacheng Chen</a> &nbsp;&nbsp; <a href="https://ruizhid.me/">Ruizhi Deng</a> &nbsp;&nbsp;  <a href="https://www2.cs.sfu.ca/~furukawa/">Yasutaka Furukawa</a></h2>
       <h2 class="project-tagline"> Simon Fraser University </h2>
       <a href="https://arxiv.org/abs/2306.01461" class="btn">Arxiv</a>
